--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
       font-size: 20px;
     }
     #search {
-      width: 100%;
-      padding: 10px;
+      width: calc(100% - 20px); /* Adjusted width to fit within the sidebar */
+      padding: 8px 10px; /* Slightly smaller padding */
       font-size: 14px;
       border: 2px solid #0077cc;
       border-radius: 8px;
       outline: none;
       transition: border-color 0.3s;
+      box-sizing: border-box; /* Ensure padding is included in the width */
     }
     #search:focus {
       border-color: #005bb5;
