--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Country Information with Map</title>
+  <title>Country Information with Modal Map</title>
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
@@ -11,80 +11,128 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      display: flex;
-      height: 100vh;
       background-color: #f4f4f9;
+      color: #333;
     }
-    #sidebar {
-      width: 300px;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    }
-    #sidebar-header {
-      padding: 15px;
-      background: white;
-      border-bottom: 1px solid #ddd;
-      position: sticky;
-      top: 0;
-      z-index: 1;
-    }
-    #sidebar h2 {
+
+    /* Header */
+    #header {
       text-align: center;
-      color: #444;
-      margin: 0 0 15px 0;
-      font-size: 20px;
+      padding: 20px;
+      background: #0077cc;
+      color: white;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
+
+    #header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    /* Search bar */
     #search {
-      width: calc(100% - 20px);
-      padding: 8px 10px;
+      width: calc(100% - 40px);
+      padding: 10px;
       font-size: 14px;
       border: 2px solid #0077cc;
       border-radius: 8px;
       outline: none;
+      margin: 20px;
       transition: border-color 0.3s;
-      box-sizing: border-box;
     }
+
     #search:focus {
       border-color: #005bb5;
     }
+
+    /* Country grid */
     #countries-grid {
-      flex: 1;
-      overflow-y: auto;
-      padding: 10px;
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-      gap: 10px;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 20px;
+      padding: 20px;
     }
+
     .country-card {
       background: white;
       border: 1px solid #ddd;
       border-radius: 8px;
-      padding: 10px;
+      padding: 15px;
       text-align: center;
       cursor: pointer;
       transition: transform 0.2s, box-shadow 0.2s;
     }
+
     .country-card:hover {
-      transform: scale(1.05);
+      transform: translateY(-5px);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
+
     .country-card img {
-      width: 50px;
+      width: 60px;
       height: auto;
       border: 1px solid #ccc;
       border-radius: 4px;
     }
+
     .country-card h3 {
-      margin: 5px 0;
-      font-size: 14px;
+      margin: 10px 0 0;
+      font-size: 16px;
       color: #333;
     }
-    #map {
-      flex: 1;
-      height: 100vh;
+
+    /* Modal */
+    #modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
     }
+
+    #modal.active {
+      display: flex;
+    }
+
+    #modal-content {
+      background: white;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 800px;
+      max-height: 90vh;
+      overflow: hidden;
+      position: relative;
+    }
+
+    #close-modal {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #0077cc;
+      border: none;
+      color: white;
+      font-size: 20px;
+      padding: 5px 10px;
+      border-radius: 50%;
+      cursor: pointer;
+      z-index: 1001;
+    }
+
+    #close-modal:hover {
+      background: #005bb5;
+    }
+
+    #map {
+      width: 100%;
+      height: 400px;
+    }
+
+    /* Footer */
     #footer {
       text-align: center;
       padding: 10px;
@@ -92,49 +140,42 @@
       border-top: 1px solid #ddd;
       font-size: 14px;
     }
+
     #footer a {
       color: #0077cc;
       text-decoration: none;
     }
+
     #footer a:hover {
       text-decoration: underline;
     }
 
     /* Mobile-friendly adjustments */
     @media (max-width: 768px) {
-      body {
-        flex-direction: column;
-      }
-      #sidebar {
-        width: 100%;
-        height: 40vh;
-        box-shadow: none;
-      }
       #countries-grid {
-        grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-        gap: 8px;
-        padding: 5px;
-      }
-      .country-card {
-        padding: 5px;
-      }
-      .country-card img {
-        width: 40px;
-      }
-      .country-card h3 {
-        font-size: 12px;
-        margin: 2px 0;
-      }
-      #map {
-        height: 60vh;
-      }
-      #sidebar-header {
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        gap: 10px;
         padding: 10px;
       }
+
+      .country-card {
+        padding: 10px;
+      }
+
+      .country-card img {
+        width: 50px;
+      }
+
+      .country-card h3 {
+        font-size: 14px;
+      }
+
       #search {
         font-size: 12px;
-        padding: 6px 8px;
+        padding: 8px;
+        margin: 10px;
       }
+
       #footer {
         font-size: 12px;
         padding: 5px;
@@ -143,29 +184,45 @@
   </style>
 </head>
 <body>
-  <!-- Sidebar for country list -->
-  <div id="sidebar">
-    <div id="sidebar-header">
-      <h2>Countries</h2>
-      <input type="text" id="search" placeholder="Search for a country...">
-    </div>
-    <div id="countries-grid"></div>
-    <div id="footer">
-      Made with ❤️ by <a href="https://github.com/younesbachouche" target="_blank">Younes Bachouche</a>
+  <!-- Header -->
+  <div id="header">
+    <h1>Country Information</h1>
+  </div>
+
+  <!-- Search bar -->
+  <input type="text" id="search" placeholder="Search for a country...">
+
+  <!-- Country grid -->
+  <div id="countries-grid"></div>
+
+  <!-- Modal for Map -->
+  <div id="modal">
+    <div id="modal-content">
+      <button id="close-modal">✕</button>
+      <div id="map"></div>
     </div>
   </div>
 
-  <!-- Map container -->
-  <div id="map"></div>
+  <!-- Footer -->
+  <div id="footer">
+    Made with ❤️ by <a href="https://github.com/younesbachouche" target="_blank">Younes Bachouche</a>
+  </div>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    // Initialize the map
-    const map = L.map('map').setView([20, 0], 2); // Default view: world map
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
-    }).addTo(map);
+    let map; // Global map variable
+
+    // Function to initialize the map
+    function initMap(latlng = [20, 0], zoom = 2) {
+      if (map) {
+        map.remove(); // Remove the existing map instance
+      }
+      map = L.map('map').setView(latlng, zoom);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap contributors'
+      }).addTo(map);
+    }
 
     // Fetch all countries data from the REST Countries API
     async function fetchCountries() {
@@ -203,24 +260,39 @@
       });
     }
 
-    // Show the selected country on the map
+    // Show the selected country on the map in a modal
     function showCountryOnMap(country) {
       const latlng = country.latlng; // Get latitude and longitude
       if (latlng && latlng.length === 2) {
-        map.setView(latlng, 5); // Zoom to the country
-        L.marker(latlng).addTo(map)
-          .bindPopup(`
-            <b>${country.name.common}</b><br>
-            Capital: ${country.capital ? country.capital[0] : 'N/A'}<br>
-            Area: ${country.area ? country.area.toLocaleString() + ' km²' : 'N/A'}<br>
-            Currency: ${country.currencies ? Object.values(country.currencies)[0].name : 'N/A'}<br>
-            Population: ${country.population ? country.population.toLocaleString() : 'N/A'}
-          `)
-          .openPopup();
+        // Show the modal first
+        document.getElementById('modal').classList.add('active');
+        // Initialize the map after the modal is visible
+        setTimeout(() => {
+          initMap(latlng, 5);
+          // Add a marker for the country
+          L.marker(latlng).addTo(map)
+            .bindPopup(`
+              <b>${country.name.common}</b><br>
+              Capital: ${country.capital ? country.capital[0] : 'N/A'}<br>
+              Area: ${country.area ? country.area.toLocaleString() + ' km²' : 'N/A'}<br>
+              Currency: ${country.currencies ? Object.values(country.currencies)[0].name : 'N/A'}<br>
+              Population: ${country.population ? country.population.toLocaleString() : 'N/A'}
+            `)
+            .openPopup();
+        }, 100); // Small delay to ensure the modal is fully rendered
       } else {
         alert('Location data not available for this country.');
       }
     }
+
+    // Close the modal
+    document.getElementById('close-modal').addEventListener('click', () => {
+      document.getElementById('modal').classList.remove('active');
+      if (map) {
+        map.remove(); // Remove the map when the modal is closed
+        map = null; // Reset the map variable
+      }
+    });
 
     // Search functionality
     document.getElementById('search').addEventListener('input', (e) => {
