--- a/index.html
+++ b/index.html
@@ -132,6 +132,65 @@
       height: 400px;
     }
 
+    /* Welcome Popup */
+    #welcome-popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+      z-index: 1002;
+      text-align: center;
+      max-width: 400px;
+      width: 90%;
+    }
+
+    #welcome-popup.active {
+      display: block;
+    }
+
+    #welcome-popup p {
+      font-size: 16px;
+      margin: 0 0 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    #close-welcome-popup {
+      background: #0077cc;
+      border: none;
+      color: white;
+      font-size: 14px;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    #close-welcome-popup:hover {
+      background: #005bb5;
+    }
+
+    /* Overlay for popup */
+    #overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 1001;
+    }
+
+    #overlay.active {
+      display: block;
+    }
+
     /* Footer */
     #footer {
       text-align: center;
@@ -180,10 +239,29 @@
         font-size: 12px;
         padding: 5px;
       }
+
+      #welcome-popup {
+        padding: 20px;
+      }
+
+      #welcome-popup p {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
 <body>
+  <!-- Overlay for popup -->
+  <div id="overlay" class="active"></div>
+
+  <!-- Welcome Popup -->
+  <div id="welcome-popup" class="active">
+    <p>
+      The developer of this website acknowledges Palestine as an independent state, with Al Quds as its capital, but does not recognize Israel. FREE GAZA!
+    </p>
+    <button id="close-welcome-popup">Close</button>
+  </div>
+
   <!-- Header -->
   <div id="header">
     <h1>Country Information</h1>
@@ -305,6 +383,12 @@
         map.remove(); // Remove the map when the modal is closed
         map = null; // Reset the map variable
       }
+    });
+
+    // Close the welcome popup
+    document.getElementById('close-welcome-popup').addEventListener('click', () => {
+      document.getElementById('welcome-popup').classList.remove('active');
+      document.getElementById('overlay').classList.remove('active');
     });
 
     // Search functionality
