--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
       color: #333;
     }
 
+    #welcome-popup p strong {
+      font-size: 18px;
+      color: #0077cc;
+    }
+
     #close-welcome-popup {
       background: #0077cc;
       border: none;
@@ -257,7 +262,7 @@
   <!-- Welcome Popup -->
   <div id="welcome-popup" class="active">
     <p>
-      The developer of this website acknowledges Palestine as an independent state, with Al Quds as its capital, but does not recognize Israel. FREE GAZA!
+      The developer of this website acknowledges <strong>Palestine 🇵🇸</strong> as an independent state, with Al Quds as its capital, but does not recognize Israel. FREE GAZA!
     </p>
     <button id="close-welcome-popup">Close</button>
   </div>
