--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
   <!-- Welcome Popup -->
   <div id="welcome-popup" class="active">
     <p>
-      The developer of this website acknowledges <strong>Palestine 🇵🇸</strong> as an independent state, with Al Quds as its capital, but does not recognize Israel. FREE GAZA!
+      This website's developer stands in solidarity with  <strong>Palestine 🇵🇸</strong> recognizing it as an independent state with Al Quds as its capital, and does not acknowledge Israel
+Free Gaza ✊️
     </p>
     <button id="close-welcome-popup">Close</button>
   </div>
